--- a/2019-03-20-PyData-Diamond-Dataset.ipynb
+++ b/2019-03-20-PyData-Diamond-Dataset.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "We are going to explore the Diamond Dataset 💎\n",
     "\n",
-    "It is a choose-your-own-adventure. If you are interested in visualization, do that. If you are interested in statistical modeling, explore that. If you are interested in machine learning or deep learning, try that."
+    "It is a choose-your-own-adventure. If you are interested in visualization, do that. If you are interested in statistical modeling, explore that. If you are interested in machine learning or deep learning, try that.\n",
+    "\n",
+    "You can download and run this notebook locally. Or you can run it in the cloud by clicking [here](https://colab.research.google.com/github/brianspiering/PyDataSIG/blob/master/2019-03-20-PyData-Diamond-Dataset.ipynb)."
    ]
   },
   {
@@ -220,9 +222,9 @@
    "source": [
     "Here sample ideas:\n",
     "    \n",
-    "- What is the linear relationship between carat size and price of the diamond? You might assume the heavier the diamond is, the higher the price should be. \n",
+    "- Is there a linear relationship between carat size and price of the diamond? You might assume the heavier the diamond is, the higher the price should be. \n",
     "\n",
-    "- Is the relationship between carat size and price of the diamond different for the different cuts?"
+    "- Is the relationship between carat size and price of the diamond different for base on the type of cut? or the color? or a combination of cut and color?"
    ]
   },
   {
