--- a/2019-04-17-Diamond-Dataset-Decision-Tree.ipynb
+++ b/2019-04-17-Diamond-Dataset-Decision-Tree.ipynb
@@ -9,41 +9,62 @@
     "\n",
     "The goal is to have a common dataset to explore together. \n",
     "\n",
-    "We are going to explore the Diamond Dataset 💎\n",
+    "Tonight, we are going to explore the Diamond 💎 Dataset by fitting a decision tree 🌳.\n",
     "\n",
-    "It is a choose-your-own-adventure. If you are interested in visualization, do that. If you are interested in statistical modeling, explore that. If you are interested in machine learning or deep learning, try that.\n",
+    "Refer back to the previous notebook about exploratory data analysis (EDA) [here](2019-03-20-Diamond-Dataset-Explore.ipynb)\n",
     "\n",
-    "You can download and run this notebook locally. Or you can run it in the cloud by clicking [here](https://colab.research.google.com/github/brianspiering/PyDataSIG/blob/master/2019-03-20-PyData-Diamond-Dataset.ipynb)."
+    "You can download and run this notebook locally. Or you can run it in the cloud by clicking [here](https://colab.research.google.com/github/brianspiering/PyDataSIG/blob/master/2019-04-17-Diamond-Dataset-Decision-Tree.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualizing a decision tree\n",
+    "-----\n",
+    "\n",
+    "Let's walk through a turtorial to get the fundamentals of decision tree [here](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating our own decision tree\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's run everything from an empty state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Here are common imports to get you started\n",
-    "import keras\n",
-    "import matplotlib.pyplot as plt\n",
+    "reset -fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here are imports to get you started\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import sklearn\n",
-    "\n",
-    "%matplotlib inline"
+    "from sklearn.tree import DecisionTreeRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,28 +74,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "The dataset contains different features of a diamond:\n",
-    "\n",
-    "- carat - weight of the diamond (0.2--5.01)\n",
-    "- cut - quality of the cut (Fair, Good, Very Good, Premium, Ideal)\n",
-    "- color -  diamond colour, from J (worst) to D (best)\n",
-    "- clarity - a measurement of how clear the diamond is (I1 (worst), SI2, SI1, VS2, VS1, VVS2, VVS1, IF (best))\n",
-    "- depth - total depth percentage = z / mean(x, y) = 2 * z / (x + y) (43--79)\n",
-    "- table - width of top of diamond relative to widest point (43--95)\n",
-    "- price - price in US dollars ($326--$18,823)\n",
-    "- x - length in mm (0--10.74)\n",
-    "- y - width in mm (0--58.9)\n",
-    "- z - depth in mm (0--31.8)\n",
-    "\n",
-    "![](https://www.everything-wedding-rings.com/images/diamondanatomyimproved.jpg)"
+    "# Let's predict price\n",
+    "y = diamonds.price.values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +115,6 @@
        "      <th>clarity</th>\n",
        "      <th>depth</th>\n",
        "      <th>table</th>\n",
-       "      <th>price</th>\n",
        "      <th>x</th>\n",
        "      <th>y</th>\n",
        "      <th>z</th>\n",
@@ -119,7 +129,6 @@
        "      <td>SI2</td>\n",
        "      <td>61.5</td>\n",
        "      <td>55.0</td>\n",
-       "      <td>326</td>\n",
        "      <td>3.95</td>\n",
        "      <td>3.98</td>\n",
        "      <td>2.43</td>\n",
@@ -132,219 +141,313 @@
        "      <td>SI1</td>\n",
        "      <td>59.8</td>\n",
        "      <td>61.0</td>\n",
-       "      <td>326</td>\n",
        "      <td>3.89</td>\n",
        "      <td>3.84</td>\n",
        "      <td>2.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.23</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>E</td>\n",
-       "      <td>VS1</td>\n",
-       "      <td>56.9</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>327</td>\n",
-       "      <td>4.05</td>\n",
-       "      <td>4.07</td>\n",
-       "      <td>2.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.29</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>I</td>\n",
-       "      <td>VS2</td>\n",
-       "      <td>62.4</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>334</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>4.23</td>\n",
-       "      <td>2.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.31</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>J</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>63.3</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>335</td>\n",
-       "      <td>4.34</td>\n",
-       "      <td>4.35</td>\n",
-       "      <td>2.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   carat      cut color clarity  depth  table  price     x     y     z\n",
-       "0   0.23    Ideal     E     SI2   61.5   55.0    326  3.95  3.98  2.43\n",
-       "1   0.21  Premium     E     SI1   59.8   61.0    326  3.89  3.84  2.31\n",
-       "2   0.23     Good     E     VS1   56.9   65.0    327  4.05  4.07  2.31\n",
-       "3   0.29  Premium     I     VS2   62.4   58.0    334  4.20  4.23  2.63\n",
-       "4   0.31     Good     J     SI2   63.3   58.0    335  4.34  4.35  2.75"
+       "   carat      cut color clarity  depth  table     x     y     z\n",
+       "0   0.23    Ideal     E     SI2   61.5   55.0  3.95  3.98  2.43\n",
+       "1   0.21  Premium     E     SI1   59.8   61.0  3.89  3.84  2.31"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Let's take a peak at the data\n",
-    "diamonds.head()"
+    "# Let's use all other variables to predict\n",
+    "X = diamonds.drop('price', axis=1)\n",
+    "X.head(n=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>carat</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>2.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>59.8</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>2.31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   carat  depth  table     x     y     z\n",
+       "0   0.23   61.5   55.0  3.95  3.98  2.43\n",
+       "1   0.21   59.8   61.0  3.89  3.84  2.31"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# It is a bit tricky to handle categorical variable. \n",
+    "# Let's drop those for now\n",
+    "X = X.drop(['cut', 'color', 'clarity'], axis=1)\n",
+    "X.head(n=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create decision tree classifer object\n",
+    "model = DecisionTreeRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train model\n",
+    "model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([404.])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define new datapoint\n",
+    "datapoint = {'carat': .22,\n",
+    "             'depth': 60,\n",
+    "             'table': 57,\n",
+    "             'x': 3.9,\n",
+    "             'y': 3.9,\n",
+    "             'z': 2.40}\n",
+    "\n",
+    "# Munge datapoint\n",
+    "datapoint_for_model = np.array(list(datapoint.values())).reshape(1, -1)\n",
+    "\n",
+    "# Predict value of new datapoint\n",
+    "prediction = model.predict(datapoint_for_model)\n",
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 53,940 rows in the Diamonds Dataset.\n"
+      "$404.00\n"
      ]
     }
    ],
    "source": [
-    "print(f\"There are {diamonds.shape[0]:,} rows in the Diamonds Dataset.\")"
+    "# Let's clean that up\n",
+    "print(f\"${prediction[0]:,.2f}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here sample ideas:\n",
-    "    \n",
-    "- Is there a linear relationship between carat size and price of the diamond? You might assume the heavier the diamond is, the higher the price should be. \n",
+    "Summary\n",
+    "-----\n",
     "\n",
-    "- Is the relationship between carat size and price of the diamond different for base on the type of cut? or the color? or a combination of cut and color?"
+    "1. Define problem - Predict the price of diamond based on attributes\n",
+    "1. Find the data - Diamond dataset\n",
+    "1. Train model - Fit Decision tree\n",
+    "1. Predict new data point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sidebar: Overfitting\n",
+    "----\n",
+    "\n",
+    "The goal of Machine Learning is learn a function from historical data that can predict future data.\n",
+    "\n",
+    "Overfitting is memorized the historical data. Memorization is brittle and might not do well predicting future data.\n",
+    "\n",
+    "We can see if we are overfitting by doing a \"train/test\" split. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Split the data \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train model just on training data\n",
+    "model.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Evaluate the model just on the test data\n",
+    "predictions = model.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import r2_score"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current model scores on unseen data 0.78 out 1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2 = r2_score(y_test, predictions)\n",
+    "\n",
+    "print(f\"The current model scores on unseen data {r2:.2f} out 1.\") "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "On Your Own\n",
+    "-----\n",
+    "\n",
+    "- Tune model by trying other parameters. Check out the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html)\n",
+    "- Add categorical data as features. An example is [here](https://scikit-learn.org/stable/modules/preprocessing.html#encoding-categorical-features)\n",
+    "- Better visualizations for the decision tree. An example is [here](https://explained.ai/decision-tree-viz/).\n",
+    "- Fit other models. A list of regression models in scikit-learn is [here](https://scikit-learn.org/stable/supervised_learning.html)"
+   ]
   },
   {
    "cell_type": "markdown",
