--- a/2019-04-17-Diamond-Dataset-Decision-Tree.ipynb
+++ b/2019-04-17-Diamond-Dataset-Decision-Tree.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "1   0.21  Premium     E     SI1   59.8   61.0  3.89  3.84  2.31"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "1   0.21   59.8   61.0  3.89  3.84  2.31"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "           presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,22 +278,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  carat  0.6301\n",
+      "  depth  0.0264\n",
+      "  table  0.0155\n",
+      "      x  0.0239\n",
+      "      y  0.2854\n",
+      "      z  0.0187\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's see how much each feature matters\n",
+    "for name, weight in zip(X.columns, model.feature_importances_):\n",
+    "    print(f\"{name:>7} {weight:>7.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([404.])"
+       "array([470.])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define new datapoint\n",
+    "# Let's see how our model predict for a new datapoint\n",
     "datapoint = {'carat': .22,\n",
     "             'depth': 60,\n",
     "             'table': 57,\n",
@@ -311,14 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$404.00\n"
+      "$470.00\n"
      ]
     }
    ],
@@ -356,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +412,7 @@
        "           presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current model scores on unseen data 0.78 out 1.\n"
+      "The current model scores on unseen data 0.77 out 1.\n"
      ]
     }
    ],
@@ -443,10 +467,10 @@
     "On Your Own\n",
     "-----\n",
     "\n",
-    "- Tune model by trying other parameters. Check out the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html)\n",
-    "- Add categorical data as features. An example is [here](https://scikit-learn.org/stable/modules/preprocessing.html#encoding-categorical-features)\n",
+    "- Tune model by trying other parameters. Check out the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html).\n",
+    "- Add categorical data as features. An example is [here](https://scikit-learn.org/stable/modules/preprocessing.html#encoding-categorical-features).\n",
     "- Better visualizations for the decision tree. An example is [here](https://explained.ai/decision-tree-viz/).\n",
-    "- Fit other models. A list of regression models in scikit-learn is [here](https://scikit-learn.org/stable/supervised_learning.html)"
+    "- Fit other models. A list of regression models in scikit-learn is [here](https://scikit-learn.org/stable/supervised_learning.html)."
    ]
   },
   {
