--- a/2019-05-15-ensembling.ipynb
+++ b/2019-05-15-ensembling.ipynb
@@ -448,6 +448,20 @@
     }
    },
    "source": [
+    "<center><h2>Try it on your own</h2></center>\n",
+    "\n",
+    "<center><a href=\"https://scikit-learn.org/stable/modules/ensemble.html\">scikit's ensemble methods</a></center>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     " "
    ]
   }
