Updates from teaching

--- a/2019-05-15-ensembling.ipynb
+++ b/2019-05-15-ensembling.ipynb
@@ -8,6 +8,23 @@
     }
    },
    "source": [
+    "<center><img src=\"images/pydata-logo.png\" width=\"75%\"/></center>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<center><a href=\"http://bit.ly/sfpython-in-the-rain\">bit.ly/sfpython-in-the-rain</a></center>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "<center><h2>Ensemble Learning, The Wisdom of the Crowds</h2></center>\n",
     "\n",
     "<center><img src=\"https://www.ibmbigdatahub.com/sites/default/files/styles/open_graph_image/public/blog_iotcrowd_thumbnail.jpg?itok=XQEqPMWi\" width=\"90%\"/></center>"
@@ -42,7 +59,7 @@
    "source": [
     "<center><h2>Ensemble Methods, aka Ensembling</h2></center>\n",
     "\n",
-    "<center><img src=\"images/1*uB92xfOmMel7Mu60hC6B1w.png\" width=\"75%\"/></center>\n",
+    "<center><img src=\"images/1*uB92xfOmMel7Mu60hC6B1w.png\" width=\"50%\"/></center>\n",
     "\n",
     "Combine multiple ML models to obtain better predictive performance than any of single models could do alone."
    ]
@@ -79,8 +96,7 @@
     }
    },
    "source": [
-    "Bagging, aka Bootstrap Aggregating\n",
-    "----\n",
+    "<center><h2>Bagging, aka Bootstrap Aggregating</h2></center>\n",
     "\n",
     "<center><img src=\"https://www.oreilly.com/library/view/python-machine-learning/9781783555130/graphics/3547_07_06.jpg\" width=\"50%\"/></center>\n",
     "\n",
@@ -97,8 +113,7 @@
     }
    },
    "source": [
-    "Bootstrap Statistical Procedure\n",
-    "-----\n",
+    "<center><h2>Bootstrap Statistical Procedure</h2></center>\n",
     "\n",
     "<center><img src=\"https://www.statisticshowto.datasciencecentral.com/wp-content/uploads/2016/10/bootstrap-sample.png\" width=\"75%\"/></center>\n",
     "\n",
@@ -169,7 +184,7 @@
     }
    },
    "source": [
-    "For regression problems (predicting a continuous value), we average the values given by all the models."
+    "For __regression__ problems (predicting a continuous value), we average the values given by all the models."
    ]
   },
   {
@@ -180,7 +195,7 @@
     }
    },
    "source": [
-    "For classification problems (predicting a categorical value), we choose the label with the most votes."
+    "For __classification__ problems (predicting a categorical value), we choose the label with the most votes."
    ]
   },
   {
@@ -191,8 +206,7 @@
     }
    },
    "source": [
-    "Why do Bagging?\n",
-    "------\n",
+    "<center><h2>Why do Bagging?</h2></center>\n",
     "\n",
     "- Increases evaluation metric performance.\n",
     "- Less likely to over-fitting since permutations of datasets are fit.\n",
@@ -208,7 +222,8 @@
    },
    "source": [
     "<center><h2>Stacking</h2></center>\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
     "<center>An ensemble learning technique that uses predictions from previous models to build a new model. </center>"
    ]
   },
@@ -224,7 +239,7 @@
     "\n",
     "<center><img src=\"https://hsto.org/getpro/habr/post_images/c28/f6a/e29/c28f6ae298041c65eba7a97d3fbcce8e.png\" width=\"75%\"/></center>\n",
     "\n",
-    "<center><h2>Metalearner learns the optimal combination of the base learners</h2></center>"
+    "<center>Metalearner learns the optimal combination of the base learners</center>"
    ]
   },
   {
@@ -250,8 +265,7 @@
     }
    },
    "source": [
-    "Boosting\n",
-    "----\n",
+    "<center><h2>Boosting</h2></center>\n",
     "\n",
     "<center><img src=\"https://littleml.files.wordpress.com/2017/03/boosted-trees-process.png\" width=\"100%\"/></center>\n",
     "\n",
@@ -266,12 +280,11 @@
     }
    },
    "source": [
-    "Boosting algorithms\n",
-    "-----\n",
+    "<center><h2>Boosting algorithms</h2></center>\n",
     "\n",
-    "- XGBoost (Currently, the most popular)\n",
     "- AdaBoost\n",
-    "- Gradient Boosting Machine (GBM)\n"
+    "- Gradient Boosting Machine (GBM)\n",
+    "- XGBoost (Currently, the most popular)"
    ]
   },
   {
@@ -329,7 +342,7 @@
     }
    },
    "source": [
-    "<center><h2>If you have time and enough data, bagging is a good choice because it only improves model performance.</h2></center>"
+    "<center>If you have time and enough data, bagging is a good choice because it only improves model performance.</center>"
    ]
   },
   {
@@ -352,7 +365,7 @@
    },
    "source": [
     "<center>It is generally a good idea to pipe the outputs of one model into the inputs of another model.</center>\n",
-    "\n",
+    "<br>\n",
     "<center>However, creating a meta-learner that is able to choose among heterogeneous models is often too complex for the gain in performance.</center>"
    ]
   },
@@ -378,7 +391,7 @@
    },
    "source": [
     "<center>Boosting is good idea if highest model performance is required (i.e., Kaggle). </center>\n",
-    "\n",
+    "<br>\n",
     "<center>However, it is more complex than Bagging (harder to implement and harder to debug)</center>"
    ]
   },
@@ -393,17 +406,7 @@
     " Summary\n",
     "------\n",
     "\n",
-    "- Ensembles are collections of model that will perform better than any individual model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    "- Ensembles are collections of model that will perform better than any individual model.\n",
     "- Bagging, Stacking, and Boosting are the most common types of ensembles."
    ]
   },
@@ -449,7 +452,7 @@
    },
    "source": [
     "<center><h2>Try it on your own</h2></center>\n",
-    "\n",
+    "<br>\n",
     "<center><a href=\"https://scikit-learn.org/stable/modules/ensemble.html\">scikit's ensemble methods</a></center>\n",
     "\n"
    ]
@@ -462,7 +465,13 @@
     }
    },
    "source": [
-    " "
+    "  <center><img src=\"images/pydata-logo.png\" width=\"75%\"/></center>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<center><a href=\"http://bit.ly/sfpython-in-the-rain\">bit.ly/sfpython-in-the-rain</a></center>\n",
+    "\n",
+    "\n"
    ]
   }
  ],
